fixing spillage of text

--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,6 @@ text-decoration-style: dashed;
     background: #f8f8f8;
     text-shadow: 0 1px 0 #fff;
 	text-wrap:normal;
-    display: block;
     padding: 12px 16px;
     font-size: 14px;
     line-height: 16px;
